mule-user-guide/v/3.4/object-to-xml-transformer-reference.adoc
image:Transformer-48x32.png[Transformer-48x32]

= Object-to-XML Transformer Reference

Use a Object-to-XML transformer to transform a Java Object to XML data using XStream.

*Minimum Configuration:* The name of the XStream driver class.

*Important*: Mule uses XStream 1.4.2. The XML-to-object transformer is vulnerable to link:http://www.securityfocus.com/bid/64760/info[CVE-2013-7285]. A remote attacker can send messages to an XML-to-object transformer and can achieve remote code execution (RCE). For more information, contact MuleSoft Customer Support.  
The Object-to-XML transformer transforms Java Object data to XML using the specified XStream driver class.

In addition to the properties common to all transformers, you can also specify class aliases and converters, as well as whether or not to accept the Mule Message.

Use the General tab to specify or browse to the XStream driver class.

image:object-to-xml1.png[object-to-xml1]

Check the Accept Mule Message box to have the transformer accept the Mule Message. Accepting the Mule Message means that the transformer serializes the entire Mule Message, not just the message payload. The entire Mule Message includes the payload, message properties, correlation ID, and so forth.

Use the Advanced tab to optionally configure the properties standard to all transformers, plus add or change class aliases and class converters.

image:object-to-xml2.png[object-to-xml2]

Use the Aliases pane to create, edit, or delete aliases for specific classes. Similarly, use the Converters pane to create, edit, or delete class converters.

== Mule ESB Reference

For more information, see link:/mule-user-guide/v/3.4/xmlobject-transformers[here].

== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft's Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
